[RADV][BISECTED] The Surge 2 (644830) - In-game assets do not render correctly since 20.3.4.
Description:
Upon reaching the charactor creator or getting in game, all 3D assets are missing and only on-screen HUD and navigational elements are visible. This issue was reported by a user on the Proton issue tracker: https://github.com/ValveSoftware/Proton/issues/3426#issuecomment-753512141.
We reproduce the issue on a RX 590 and Vega VII. The failure occured between the 20.2 and 20.3 release and git bisect found e4d75c22 to possibly be the offending commit.
20.2.6 | 20.3.4 | 20.3.4 - Charactor Creator |
---|---|---|
Trace
GFXReconstruct (Compressed ZLIB): https://drive.google.com/file/d/1jNZ8qTX5Wbvl02C5ytNqt0CbQLpn76F8/view?usp=sharing
Steps to Reproduce
- Open [Steam] and launch The Surge 2 (steam://run/644830)
- Select "New Game".
- Select an empty "savefile" slot.
- Skip the two cutscenes.
- (Charactor Creator)
- Confirm charactor and skip one more cutscene to enter gameplay.
Repro Rate
5/5
Bisect:
e4d75c22 is the first bad commit commit e4d75c22 Author: Rhys Perry pendingchaos02@gmail.com Date: Mon Aug 24 13:58:49 2020 +0100
nir/opt_shrink_vectors: shrink image stores using the format
fossil-db (Navi):
Totals from 657 (0.48% of 135946) affected shaders:
VGPRs: 26076 -> 25520 (-2.13%); split: -2.15%, +0.02%
CodeSize: 3033016 -> 3014472 (-0.61%); split: -0.64%, +0.03%
MaxWaves: 9386 -> 9420 (+0.36%)
Instrs: 590109 -> 585502 (-0.78%); split: -0.82%, +0.04%
Signed-off-by: Rhys Perry <pendingchaos02@gmail.com>
Reviewed-by: Eric Anholt <eric@anholt.net>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/5772>
src/compiler/nir/nir_opt_shrink_vectors.c | 28 ++++++++++++++++++++++++++++ 1 file changed, 28 insertions(+)
Environment
System information
- OS: Ubuntu 20.04.2 LTS
- GPU(s): RX 580 Series (POLARIS10, DRM 3.38.0, 5.8.0-43-generic, LLVM 11.0.1) / Vega 20 [Radeon VII] [1002:66af] (rev c1)
- Kernel version: 5.8.0-43-generic
- Mesa version: 4.6 (Compatibility Profile) Mesa 20.3.4 - kisak-mesa PPA
- Xserver version (if applicable): 1.20.9
- Desktop manager and compositor: Gnome (3.36.3)
Mesa
Proton
1612904805 proton-5.13-6