nir/opt_shrink_vectors: avoid shrinking image stores with wrong format

The Surge 2 and old versions of Shadow of the Tomb Raider specify a format
with fewer components than they actually pass to the image store.
Workaround this by assuming they gave the wrong format by looking for the
last component that does not match the first.

fossil-db (GFX10.3):
Totals from 383 (0.26% of 146267) affected shaders:
VGPRs: 19960 -> 20048 (+0.44%)
CodeSize: 2878428 -> 2885360 (+0.24%); split: -0.01%, +0.25%
Instrs: 546654 -> 547963 (+0.24%); split: -0.01%, +0.24%
VClause: 9290 -> 9322 (+0.34%); split: -0.01%, +0.36%
SClause: 18736 -> 18738 (+0.01%)
Copies: 28967 -> 30195 (+4.24%); split: -0.06%, +4.30%
Branches: 14235 -> 14245 (+0.07%)
PreVGPRs: 17726 -> 17746 (+0.11%)
Cycles: 6870512 -> 6876240 (+0.08%); split: -0.02%, +0.11%
VMEM: 52821 -> 52986 (+0.31%); split: +0.33%, -0.02%
SMEM: 19525 -> 19773 (+1.27%); split: +1.31%, -0.04%

I think some of the regressions are fine actually, but we can't know
for certain. This optimization still seems beneficial for some shaders
at least.

Signed-off-by: Rhys Perry <pendingchaos02@gmail.com>
Fixes: e4d75c22beb ("nir/opt_shrink_vectors: shrink image stores using the format")
Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/4347